Bio Lab Session 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
         "ACGTACGTACGT",
+        "AGCTTGCAGCGTCCGTTAGCTCGAGTCCAGGACGTTAGTCCTGCAGTC",
         "anak",
         "arraynya",
+        "ATGCATGCATGCATGCATGCATGCATGC",
+        "autopct",
         "buat",
+        "CAGTAAGTTGCCGTTAGCGCGTAGTGCCAGTAAGCGGCTCGTTAGTGG",
         "CGATCGATCGAT",
         "collectedimages",
         "cvzone",
@@ -48,6 +52,7 @@
         "Tangan",
         "teks",
         "tqdm",
-        "vidualisasi"
+        "vidualisasi",
+        "wallance"
     ]
 }
