--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "collectedimages",
         "cvzone",
         "dataframe",
+        "dengan",
         "DSHOW",
         "evaluasi",
         "gede",
@@ -28,6 +29,7 @@
         "jenis",
         "kanan",
         "ketika",
+        "kivy",
         "kondisi",
         "lademy",
         "maka",
@@ -43,6 +45,7 @@
         "Pclass",
         "punya",
         "pyautogui",
+        "rasio",
         "ruas",
         "seaborn",
         "sebuah",
