--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,8 @@
         "kivy",
         "kondisi",
         "lademy",
+        "lbfgs",
+        "liblinear",
         "maka",
         "matplotlib",
         "MAXN",
