--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "AGCTTGCAGCGTCCGTTAGCTCGAGTCCAGGACGTTAGTCCTGCAGTC",
         "anak",
         "arraynya",
+        "ATGATCTCGTAA",
         "ATGCATGCATGCATGCATGCATGCATGC",
         "autopct",
         "buat",
@@ -13,6 +14,7 @@
         "cvzone",
         "dataframe",
         "dengan",
+        "Dmol",
         "DSHOW",
         "evaluasi",
         "gede",
@@ -34,6 +36,7 @@
         "lademy",
         "lbfgs",
         "liblinear",
+        "logreg",
         "maka",
         "matplotlib",
         "MAXN",
